--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -34,7 +34,7 @@ body {
         opacity: 0.7;
     }
     &:focus {
-        outline: 2px solid rgba(255, 104, 56, 0.70);
+        outline: 2px solid rgba($orange-900, 0.70);
     }
     &:active {
         opacity: 0.5;
