--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -18,6 +18,19 @@
         letter-spacing: 0.18px;
         font-weight: 400;
         line-height: 1.3;
+        transition: color 0.3s, outline 0.3s, text-shadow 0.3s;
+
+        &:hover {
+            color: $orange-900;
+        }
+
+        &:focus {
+            outline: 2px solid rgba($orange-900, 0.7);
+        }
+
+        &:active {
+            text-shadow: 2px 2px 5px rgba($dark, 0.5);
+        }
     }
 
     &__text {
@@ -28,6 +41,12 @@
         padding: 30px 0;
         background-color: $darkBlue-900;
         justify-content: center;
+        outline: 2px solid transparent;
+        transition: color 0.3s;
+
+        &:hover {
+            color: $orange-900;
+        }
     }
 }
 
@@ -47,6 +66,28 @@
         outline: 1px solid $gray;
         background-color: $white;
         border-radius: 5px;
+        outline: 2px solid transparent;
+        transition: color 0.3s, background-color 0.3s, outline-color 0.3s;
+
+        &::placeholder {
+            transition: color 0.3s;
+        }
+
+        &:hover::placeholder {
+            color: $darkBlue-900;
+        }
+
+        &:hover {
+            color: $orange-900;
+            background-color: transparent;
+            outline-color: rgba($orange-900, 0.7);
+        }
+
+        &:focus {
+            color: $orange-900;
+            outline-color: rgba($orange-900, 0.7);
+            background-color: rgba($orange-900, 0.10);
+        }
 
         &::placeholder {
             color: $gray;
@@ -62,8 +103,24 @@
         display: flex;
         justify-content: center;
         align-items: center;
-    }
+        outline: 2px solid transparent;
+        border-radius: 5px;
+        transition: color 0.3s, outline-color 0.3s, background-color 0.3s;
 
+        &:hover {
+            color: $orange-900;
+            outline-color: rgba($orange-900, 0.7);
+            background-color: $white;
+        }
+        &:focus {
+            color: $orange-900;
+            outline-color: rgba($orange-900, 0.7);
+        }
+        &:active {
+            color: $orange-900;
+            background-color: rgba($orange-900, 0.10);
+        }
+    }
 }
 
 .svg__footer--button {
@@ -81,6 +138,20 @@
     &__link {
         display: flex;
         align-items: center;
+        transition: color 0.3s, outline 0.3s, text-shadow 0.3s;
+
+        &:hover {
+            color: $orange-900;
+        }
+
+        &:focus {
+            outline: 2px solid rgba($orange-900, 0.7);
+        }
+
+        &:active {
+            text-shadow: 2px 2px 5px rgba($dark, 0.5);
+        }
+
     }
 }
 
@@ -103,5 +174,21 @@
         height: 39px;
         align-items: center;
         justify-content: center;
+        outline: 2px solid transparent;
+        transition: background-color 0.3s, outline-color 0.3s;
+
+        &:hover {
+            background-color: $orange-900;
+        }
+
+        &:focus {
+            outline-color: rgba($orange-900, 0.7);
+            background-color: rgba($orange-900, 0.10);
+        }
+
+        &:active {
+            background-color: rgba($orange-900, 0.10);
+        }
+
     }
 }
