--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -24,6 +24,7 @@
 
 &__title--color {
     display: block;
+    margin-bottom: 10px;
     color: $darkBlue-900;
 }
 
@@ -37,6 +38,22 @@
 &__button {
     letter-spacing: 0.54px;
     margin-right: 20px;
+    outline: 2px solid transparent;
+    transition: color 0.4s, outline-color 0.4s, background-color 0.4s;
+    &:hover{
+        color: $orange-900;
+        outline-color: rgba($orange-900, 0.7);
+        background-color: transparent;
+    }
+    &:focus{
+        color: $orange-900; 
+        outline-color: rgba($orange-900, 0.7);
+        background-color: rgba($orange-900, 0.10);
+    }
+    &:active{
+        color: $orange-900;
+        background-color: rgba($orange-900, 0.10);
+    }
 }
 
 &__link {
@@ -44,15 +61,20 @@
     line-height: 1.5;
     color: $darkBlue-900;
     position: relative;
+    border-radius: 5px;
+    outline: 2px solid transparent;
+    text-decoration: underline;
+    transition: color 0.3s, outline-color 0.3s, text-shadow 0.3s;
 
-    &::before {
-        content: "";
-        position: absolute;
-        border-bottom: 2px solid $darkBlue-900;
-        z-index: -1;
-        bottom: 3px;
-        left: 0;
-        width: 100%;
+    &:hover {
+        color: $orange-900;
+    }
+    &:focus
+    {
+        outline-color: rgba($orange-900, 0.7);
+    }
+    &:active {
+        text-shadow: 2px 2px 5px rgba($dark, 0.5);
     }
 }
 }
