--- a/app/scss/_categories.scss
+++ b/app/scss/_categories.scss
@@ -14,6 +14,8 @@
     margin-right: 20px;
     }
 
+
+
     &__button {
         border-radius: 5px;
         font-size: 20px;
@@ -23,12 +25,42 @@
         outline: 1px solid $silver-200;
         display: flex;
         align-items: center;
+
+        &--active {
+            color: $white;
+            background-color: $orange-900;
+        }
+
+        &:hover {
+            outline-color: rgba($orange-900, 0.7);
+            background-color: rgba($orange-900, 0.10);
+        }
+        &:focus {
+            outline-color: rgba($orange-900, 0.7);
+        }
+        &:active {
+            box-shadow: 0 -5px 12px 0 rgba($orange-900, 0.20) inset;
+        }
     }
 
     &__more {
         font-size: 20px;
         line-height: 1.5px;
         text-decoration-line: underline;
+        transition: color 0.3s, border-radius 0.3s, outline-color 0.3s, text-shadow 0.3s;
+
+        &:hover {
+            color: $orange-900;
+        }
+        &:focus {
+            border-radius: 5px;
+            outline-color: rgba($orange-900, 0.7);
+        }
+        &:active {
+            text-shadow: 2px 2px 5px rgba($dark, 0.5);
+        }
+
+
     }
 }
 
@@ -39,7 +71,6 @@
 }
 
 .product {
-
     &__list {
     display: grid;
     grid-template-columns: repeat(5, minmax(0, 210px));
@@ -60,21 +91,20 @@
         background-color: $white;
         outline: 1px solid #ECECEC;
         border-radius: 5px;
-    }
+        transition: outline-color 0.3s;
 
-    &__img {
-
+        &:hover {
+            outline-color: rgba($orange-900, 0.7);
+        }
     }
 
     &__title {
         font-size: 15px;
         line-height: normal;
         min-height: 37px;
-
     }
     
     &__price {
-
         line-height: 1.4;
         font-weight: 500;
         color: $darkBlue-900;
@@ -82,7 +112,7 @@
 
     &__btn {
         padding: 7px 14px;
-        font-size: 14px;
+        font-size: 14px;   
     }
 
 }
