--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -13,25 +13,29 @@
         margin: 0 50px 0 auto;
     }
 
+    &__item--active {
+        color: $orange-900;
+    }
+
     &__item:not(:last-child) {
         margin-right: 40px;
     }
 
     &__link {
         letter-spacing: 0.18px;
-        transition: color 0.3s, border-radius 0.3s, outline 0.3s, text-shadow 0.3s;
+        border-radius: 5px;
+        transition: color 0.3s, outline 0.3s, text-shadow 0.3s;
 
         &:hover {
             color: $orange-900;
         }
 
         &:focus {
-            border-radius: 5px;
-            outline: 2px solid rgba(255, 104, 56, 0.70);
+            outline: 2px solid rgba($orange-900, 0.7);
         }
 
         &:active {
-            text-shadow: 2px 2px 5px rgba(49, 53, 43, 0.50);
+            text-shadow: 2px 2px 5px rgba($dark, 0.5);
         }
     }
 }
@@ -52,15 +56,20 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        transition: background-color 0.3s, outline-color 0.3s;
 
-        &:hover {}
-
-        &:focus {
-            outline-color: rgba(255, 104, 56, 0.70);
-            background-color: rgba(255, 104, 56, 0.10);
+        &:hover {
+            background-color: $orange-900;
         }
 
-        &:active {}
+        &:focus {
+            outline-color: rgba($orange-900, 0.7);
+            background-color: rgba($orange-900, 0.10);
+        }
+
+        &:active {
+            background-color: rgba($orange-900, 0.10);
+        }
     }
 
     &__btn--cart {
@@ -72,7 +81,7 @@
         border-radius: 50%;
         background-color: $orange-900;
         right: 4px;
-        top: 5px;
+        top: 7px;
         width: 14px;
         height: 14px;
         color: $white;
