--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -61,19 +61,21 @@
     line-height: 1.5;
     color: $darkBlue-900;
     position: relative;
-    border-radius: 5px;
     outline: 2px solid transparent;
-    text-decoration: underline;
-    transition: color 0.3s, outline-color 0.3s, text-shadow 0.3s;
+    border-bottom: 2px solid $darkBlue-900;
+    transition: color 0.3s, outline-color 0.3s, text-shadow 0.3s, border-bottom-color 0.3s;
 
     &:hover {
         color: $orange-900;
+        border-bottom-color: transparent;
     }
     &:focus
     {
+        border-radius: 5px;
         outline-color: rgba($orange-900, 0.7);
     }
     &:active {
+        border-bottom-color: transparent;
         text-shadow: 2px 2px 5px rgba($dark, 0.5);
     }
 }
