--- a/app/scss/_categories.scss
+++ b/app/scss/_categories.scss
@@ -4,6 +4,9 @@
         text-align: center;
     }
 
+    &__title {
+        margin-bottom: 60px;
+    }
     &__filter {
         display: flex;
         margin-bottom: 45px;
@@ -17,7 +20,6 @@
 
 
     &__button {
-        border-radius: 5px;
         font-size: 20px;
         color: $darkBlue-900; 
         background-color: $white;
