--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -4,13 +4,13 @@ body {
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     @extend %rubik-400;
     font-size: 18px;
     line-height: 1.3;
     color: $dark;
     background-color: $bg-color;
-    display: flex;
-    flex-direction: column;
 }
 
 .main {
@@ -45,16 +45,53 @@ body {
 .title {
     @extend %rubik-500;
     font-size: 36px;
-    margin-bottom: 60px;
     color: $darkBlue-900;
 }
 
 .button {
+    display: inline-block;
+    border: 2px solid transparent;
     padding: 12px 32px;
     border-radius: 6px;
     background-color: $orange-900;
     color: $white;
+    transition: color 0.3s, border 0.3s, background-color 0.3s;
+
+    &:focus {
+		color: $orange-900;
+		border: 2px solid $orange-900;
+		background-color: rgba($orange-900, 0.1);
+	}
+
+	&:hover {
+		color: $orange-900;
+		border: 2px solid $orange-900;
+		background-color: transparent;
+	}
+
+	&:active {
+		color: $orange-900;
+		background-color: rgba($orange-900, 0.1);
+	}
 }
+
+.link, .menu__link {
+	color: $dark;
+	display: inline-block;
+	border: 2px solid transparent;
+	transition: border 0.3s, border-radius 0.3s, color 0.3s, text-shadow 0.3s;
+	&:focus {
+		border: 2px solid $orange-900;
+		border-radius: 7px;
+	}
+	&:hover {
+		color: $orange-900;
+	}
+	&:active {
+		text-shadow: 2px 2px 5px rgba($dark, 0.5);
+	}
+}
+
 
 .sr-only {
     position: absolute;
