--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -13,10 +13,6 @@
         margin: 0 50px 0 auto;
     }
 
-    &__item--active {
-        color: $orange-900;
-    }
-
     &__item:not(:last-child) {
         margin-right: 40px;
     }
@@ -24,18 +20,9 @@
     &__link {
         letter-spacing: 0.18px;
         border-radius: 5px;
-        transition: color 0.3s, outline 0.3s, text-shadow 0.3s;
 
-        &:hover {
+        &--active {
             color: $orange-900;
-        }
-
-        &:focus {
-            outline: 2px solid rgba($orange-900, 0.7);
-        }
-
-        &:active {
-            text-shadow: 2px 2px 5px rgba($dark, 0.5);
         }
     }
 }
@@ -52,7 +39,6 @@
         width: 44px;
         height: 44px;
         outline: 2px solid transparent;
-        border-radius: 5px;
         display: flex;
         align-items: center;
         justify-content: center;
