--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,8 +4,6 @@
 @import 'global';
 @import 'blocks/header';
 @import 'blocks/hero';
+@import './blocks/_productCard';
 @import 'blocks/categories';
 @import 'blocks/footer';
-
-
-@import 'media';
