--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -4,13 +4,19 @@ body {
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    @extend %rubik-400;
+    font-family: 'Rubik', 'Tahoma', sans-serif;
+    font-style: normal;
+    font-weight: 400;
     font-size: 18px;
     line-height: 1.3;
     color: $dark;
     background-color: $bg-color;
+}
+
+.wrapper {
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .main {
@@ -31,25 +37,29 @@ body {
     border-radius: 5px;
     transition: opacity 0.4s, outline 0.4s;
     outline-offset: 3px;
+
     &:hover {
         opacity: 0.7;
     }
+
     &:focus {
         outline: 2px solid rgba($orange-900, 0.70);
     }
+
     &:active {
         opacity: 0.5;
     }
 }
 
 .title {
-    @extend %rubik-500;
+    font-weight: 500;
     font-size: 36px;
     color: $darkBlue-900;
 }
 
 .button {
     display: inline-block;
+    font-size: 20px;
     border: 2px solid transparent;
     padding: 12px 32px;
     border-radius: 6px;
@@ -58,40 +68,54 @@ body {
     transition: color 0.3s, border 0.3s, background-color 0.3s;
 
     &:focus {
-		color: $orange-900;
-		border: 2px solid $orange-900;
-		background-color: rgba($orange-900, 0.1);
-	}
+        color: $orange-900;
+        border-color: $orange-900;
+        background-color: rgba($orange-900, 0.1);
+    }
 
-	&:hover {
-		color: $orange-900;
-		border: 2px solid $orange-900;
-		background-color: transparent;
-	}
+    &:hover {
+        color: $orange-900;
+        border-color: $orange-900;
+        background-color: transparent;
+    }
 
-	&:active {
-		color: $orange-900;
-		background-color: rgba($orange-900, 0.1);
-	}
+    &:active {
+        color: $orange-900;
+        background-color: rgba($orange-900, 0.1);
+    }
 }
 
-.link, .menu__link {
-	color: $dark;
-	display: inline-block;
-	border: 2px solid transparent;
-	transition: border 0.3s, border-radius 0.3s, color 0.3s, text-shadow 0.3s;
-	&:focus {
-		border: 2px solid $orange-900;
-		border-radius: 7px;
-	}
-	&:hover {
-		color: $orange-900;
-	}
-	&:active {
-		text-shadow: 2px 2px 5px rgba($dark, 0.5);
-	}
+.link {
+    display: inline-block;
+    font-size: 20px;
+    line-height: 1.5;
+    color: $darkBlue-900;
+    border: 2px solid transparent;
+    transition: border 0.3s, border-radius 0.3s, color 0.3s, text-shadow 0.3s;
+
+    &:focus {
+        border-color: $orange-900;
+        border-radius: 7px;
+    }
+
+    &:hover {
+        color: $orange-900;
+    }
+
+    &:active {
+        text-shadow: 2px 2px 5px rgba($dark, 0.5);
+    }
 }
 
+.icon-mask {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-color: $darkBlue-900;
+    mask-repeat: no-repeat;
+    mask-size: contain;
+    mask-position: center;
+}
 
 .sr-only {
     position: absolute;
