--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -7,9 +7,9 @@
 
     &__list {
         display: grid;
-        grid-template-columns: repeat(3, 160px);
+        grid-template-columns: repeat(3, auto);
         max-height: 152px;
-        gap: 20px;
+        gap: 0 90px;
         margin-right: 88px;
     }
 
@@ -18,6 +18,7 @@
         letter-spacing: 0.18px;
         font-weight: 400;
         line-height: 1.3;
+        white-space: nowrap;
     }
 
     &__text {
