--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -4,10 +4,6 @@
 &__inner {
     display: flex;
     align-items: center;
-    background-image: image-set(
-        url('../images/hero/guy@1x.png') type('image/png') 1x,
-        url('../images/hero/guy@2x.png') type('image/png') 2x
-        );
     background-repeat: no-repeat;
     background-position: right;
     background-size: contain;
@@ -19,17 +15,17 @@
 }
 
 &__title {
-    @extend %rubik-500;
+    font-weight: 500;
     font-size: 66px;
     text-transform: uppercase;
-    color: $orange-900;
     margin-bottom: 20px;
-}
-
-&__title--color {
-    display: block;
-    margin-bottom: 10px;
     color: $darkBlue-900;
+
+    &--color {
+        display: block;
+        margin-bottom: 10px;
+        color: $orange-900;
+    }
 }
 
 &__text {
@@ -45,9 +41,6 @@
 }
 
 &__link {
-    font-size: 20px;
-    line-height: 1.5;
-    color: $darkBlue-900;
-    position: relative;
+    
 }
 }
