--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -1,5 +1,6 @@
 .hero {
     padding: 0;
+    font-size: 20px;
 
 &__inner {
     display: flex;
@@ -30,17 +31,14 @@
 
 &__text {
     max-width: 450px;
-    font-size: 20px;
     line-height: 1.5;
     margin-bottom: 20px;
 }
 
-&__button {
+&__btn {
     letter-spacing: 0.54px;
     margin-right: 20px;
+    font-size: 18px;
 }
 
-&__link {
-    
-}
 }
