--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,4 +8,6 @@
 @import '../module/categories/categories';
 @import '../module/features/features';
 @import '../module/restaurant/restaurant';
+@import '../module/review/review';
+@import '../module/application/application';
 @import '../module/footer/footer';
