--- a/src/module/restaurant/_restaurant.scss
+++ b/src/module/restaurant/_restaurant.scss
@@ -11,5 +11,58 @@
     gap: 30px;
 }
 
-
 }
+
+.rest-card {
+    border-radius: 10px 10px 0px 0px;
+    box-shadow: 0 3px 3px 0px rgba(0, 0, 0, 0.10);
+    max-width: 370px;
+    &__link {
+    }
+
+    &__img {
+        margin-bottom: 15px;
+    }
+
+    &__box {
+        display: flex;
+        padding: 0 20px 20px 20px;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    &__title {
+        font-size: 24px;
+        display: block;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    &__time {
+        margin: 0 auto 0 0;
+    }
+
+    &__btn {
+        border-radius: 20px;
+        padding: 11px 32px 9px 32px;
+        display: flex;
+        align-items: center;
+    }
+}
+
+.icon-mask--icon-time {
+    width: 22px;
+    height: 22px;
+    mask-image: url('../../images/icons/sprite.svg#icon-time');
+    margin-right: 10px;
+}
+
+.icon-mask--icon-arrow {
+    width: 16px;
+    height: 16px;
+    mask-image: url('../../images/icons/sprite.svg#icon-arrow-right');
+    background-color: $white;
+}
+
+
+
