--- a/src/module/hero/_hero.scss
+++ b/src/module/hero/_hero.scss
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     background-position: right;
     background-size: contain;
-    padding: 155px 0;
+    min-height: 655px;
 }
 
 &__content {
@@ -38,6 +38,20 @@
     letter-spacing: 0.54px;
     margin-right: 20px;
     font-size: 18px;
+}
+
+&__link {
+    &:hover::after {
+        border-bottom-color: transparent;
+    }
+
+    &:focus::after {
+        border-bottom-color: transparent;
+    }
+
+    &:active::after {
+        border-bottom-color: transparent;
+    }
 }
 
 }
