--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -85,6 +85,22 @@ body {
     }
 }
 
+.btn--with-icon {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.btn--with-icon::before {
+    content: '';
+    // width: 18px;
+    // height: 18px;
+    background-color: $darkBlue-900;
+    mask-size: contain;
+    mask-position: center;
+    mask-repeat: no-repeat;
+}
+
 .link {
     font-size: 20px;
     line-height: 1.5;
@@ -93,7 +109,7 @@ body {
     transition: outline 0.3s, border-radius 0.3s, color 0.3s, text-shadow 0.3s;
 
     &:focus {
-        outline-color: $orange-900;
+        outline-color: rgba($orange-900, 0.7);
         border-radius: 7px;
     }
 
@@ -131,16 +147,6 @@ body {
     mask-repeat: no-repeat;
     mask-size: contain;
     mask-position: center;
-}
-
-.btn--with-icon {
-    content: '';
-    // width: 18px;
-    // height: 18px;
-    background-color: $darkBlue-900;
-    mask-size: contain;
-    mask-position: center;
-    mask-repeat: no-repeat;
 }
 
 .sr-only {
