--- a/src/module/review/_review.scss
+++ b/src/module/review/_review.scss
@@ -4,10 +4,11 @@
         margin-bottom: 60px;
     }
 
-    &__inner {
+    &__content {
         display: flex;
         padding: 0 90px;
         align-items: center;
+        margin-bottom: 30px;
     }
 
     &__title {
@@ -65,4 +66,55 @@
         font-size: 14px;
     }
 
+}
+
+.review-slider {
+    display: flex;
+    align-items: center;
+    max-width: 220px;
+    justify-content: space-between;
+    margin: 0 auto;
+
+    &__navigation {
+        &::before {
+            content: '';
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            outline: 2px solid $gray;
+            width: 38px;
+            height: 38px;
+            font-weight: 700;
+            font-size: 28px;
+            color: $gray;
+        }
+
+        &--left {
+            &::before {
+                content: '<';
+            }
+        }
+
+        &--right {
+            &::before {
+                content: '>';
+            }
+        }
+    }
+    &__dots {
+        display: flex;
+        gap: 17px;
+    }
+
+    &__item {
+        &::before {
+            content: '';
+            display: block;
+            border-radius: 50%;
+            width: 14px;
+            height: 14px;
+            background-color: $orange-900;
+        }
+    }
 }
