--- a/src/module/application/_application.scss
+++ b/src/module/application/_application.scss
@@ -3,6 +3,10 @@
     &__inner {
         display: flex;
         align-items: center;
+        background-repeat: no-repeat;
+        background-position: right;
+        background-size: contain;
+        min-height: 385px;
     }
 
     &__box {
@@ -28,4 +32,17 @@
     &__item {
         margin-right: 30px;
     }
+
+    .application-link:hover .application__marketplace-link {
+        border-radius: 4px;
+        outline: 2px solid rgba($orange-900, 0.70);
+        box-shadow: 0px 3px 15px 0px rgba(255, 104, 56, 0.50);
+    }
+
+    .application-link:active img {
+        box-shadow: 2px 2px 5px rgba(54, 56, 83, 0.50);
+    }
+
+    &:active {}
+
 }
