--- a/src/module/categories/_categories.scss
+++ b/src/module/categories/_categories.scss
@@ -37,11 +37,19 @@
             background-color: rgba($orange-900, 0.10);
         }
 
+        &:hover .categories__icon {
+            background-color: $orange-900;
+        }
+
         &:focus {
             outline-color: rgba($orange-900, 0.7);
+            color: $darkBlue-900;
+            background-color: transparent;
         }
 
         &:active {
+            color: $darkBlue-900;
+            background-color: $white;
             box-shadow: 0 -5px 12px 0 rgba($orange-900, 0.20) inset;
         }
     }
@@ -51,69 +59,43 @@
         height: 44px;
         margin-right: 10px;
 
-        &:hover {
-            background-color: $orange-900;
+        &-burger  {
+            mask-image: url('../../images/icons/sprite.svg#icon-category-burger');
         }
 
-        &:focus {
-
+        &-pizza  {
+            mask-image: url('../../images/icons/sprite.svg#icon-category-pizza');
         }
-
-        &:active {
-
+        
+        &-sandvich  {
+            mask-image: url('../../images/icons/sprite.svg#icon-category-sandvich');
         }
-
+        
+        &-asia  {
+            mask-image: url('../../images/icons/sprite.svg#icon-category-asia');
+        }
+        
+        &-dish  {
+            mask-image: url('../../images/icons/sprite.svg#icon-category-dish');
+        }
     }
     
-    &__icon-burger  {
-        mask-image: url('../../images/icons/sprite.svg#icon-category-burger');
-    }
-    
-    &__icon-pizza  {
-        mask-image: url('../../images/icons/sprite.svg#icon-category-pizza');
-    }
-    
-    &__icon-sandvich  {
-        mask-image: url('../../images/icons/sprite.svg#icon-category-sandvich');
-    }
-    
-    &__icon-asia  {
-        mask-image: url('../../images/icons/sprite.svg#icon-category-asia');
-    }
-    
-    &__icon-dish  {
-        mask-image: url('../../images/icons/sprite.svg#icon-category-dish');
-    }
+    &__btn-more {
+        @extend .link;
+        @extend  .link--underline;
+        border-radius: 5px;
 
-    &__more {
-        font-size: 20px;
-        line-height: 1.5px;
-        transition: color 0.3s, border-radius 0.3s, outline-color 0.3s, text-shadow 0.3s;
-
-        &--text {
-            position: relative;
-
-            &::after {
-                content: '';
-                position: absolute;
-                border-bottom: 1px solid $darkBlue-900;
-                width: 100%;
-                left: 0;
-                bottom: 2px;
-            }
+        &::after {
+            bottom: 6px;
         }
 
-        &:hover {
-            color: $orange-900;
+        &:hover::after,
+        &:active::after {
+            border-bottom-color: transparent;
         }
 
-        &:focus {
-            border-radius: 5px;
-            outline-color: rgba($orange-900, 0.7);
-        }
-
-        &:active {
-            text-shadow: 2px 2px 5px rgba($dark, 0.5);
+        &:focus::after {
+            border-bottom-color: $darkBlue-900;
         }
     }
 }
