--- a/src/module/hero/_hero.scss
+++ b/src/module/hero/_hero.scss
@@ -21,7 +21,7 @@
     margin-bottom: 20px;
     color: $darkBlue-900;
 
-    &--color {
+    &__color {
         display: block;
         margin-bottom: 10px;
         color: $orange-900;
