--- a/src/module/restaurant/_restaurant.scss
+++ b/src/module/restaurant/_restaurant.scss
@@ -17,7 +17,10 @@
     border-radius: 10px 10px 0px 0px;
     box-shadow: 0 3px 3px 0px rgba(0, 0, 0, 0.10);
     max-width: 370px;
-    &__link {
+
+    &:hover {
+        background: $white;
+        box-shadow: 0 3px 15px 0 rgba(255, 104, 56, 0.50);
     }
 
     &__img {
@@ -38,30 +41,62 @@
         margin-bottom: 20px;
     }
 
+    &__icon--time {
+        width: 22px;
+        height: 22px;
+        mask-image: url('../../images/icons/sprite.svg#icon-time');
+        margin-right: 10px;
+    }
+
     &__time {
         margin: 0 auto 0 0;
     }
 
     &__btn {
         border-radius: 20px;
-        padding: 11px 32px 9px 32px;
+        padding: 0;
         display: flex;
         align-items: center;
+        width: 79px;
+        height: 33px;
+
+        &:hover .rest-card__icon{
+            margin: 0 7px 0 auto;
+        }
+
+        .rest-card__icon {
+            margin: 0 auto;
+            transition: margin-left 3s, margin-right 3s;
+        }
+
+        &:hover .rest-card__icon,
+        &:focus .rest-card__icon,
+        &:active .rest-card__icon {
+            background-color: $orange-900;
+        }
+
     }
+
+    &__icon--arrow {
+        width: 16px;
+        height: 16px;
+        mask-image: url('../../images/icons/sprite.svg#icon-arrow-right');
+        background-color: $white;
+    }
+
 }
 
-.icon-mask--icon-time {
-    width: 22px;
-    height: 22px;
-    mask-image: url('../../images/icons/sprite.svg#icon-time');
-    margin-right: 10px;
+
+.rest-card__btn .rest-card__icon {
+    transition: margin-left 3s, margin-right 3s;
 }
 
-.icon-mask--icon-arrow {
-    width: 16px;
-    height: 16px;
-    mask-image: url('../../images/icons/sprite.svg#icon-arrow-right');
-    background-color: $white;
+.rest-card__btn {
+    transition: margin-left 3s, margin-right 3s;
+}
+
+.rest-card__icon {
+    transition: margin-left 3s, margin-right 3s;
 }
 
 
