--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'reset';
 @import 'fonts';
 @import 'vars';
+@import 'mixins';
 @import 'global';
 @import '../module/header/header';
 @import '../module/hero/hero';
