--- a/src/module/footer/_footer.scss
+++ b/src/module/footer/_footer.scss
@@ -30,6 +30,8 @@
         font-weight: 400;
         line-height: 1.3;
         white-space: nowrap;
+        line-break: anywhere;
+
     }
 
     &__text {
@@ -92,7 +94,7 @@
 
     &__btn {
         font-weight: 500;
-        padding: 13px 0;
+        padding: 13px 10px;
         width: 100%;
         font-size: 14px;
         display: flex;
@@ -125,6 +127,7 @@
         align-items: center;
         font-size: 16px;
         line-height: 2;
+        white-space: nowrap;
 
         &:hover .address__icon {
             background-color: $orange-900;
