--- a/src/module/header/_header.scss
+++ b/src/module/header/_header.scss
@@ -1,3 +1,7 @@
+.header__logo {
+    margin-right: 50px;
+}
+
 .menu {
     display: flex;
     align-items: center;
@@ -11,6 +15,7 @@
     &__list {
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
         margin: 0 53px 0 auto;
         gap: 40px;
     }
@@ -86,7 +91,7 @@
         background-color: $orange-900;
         right: 1px;
         top: 5px;
-        width: 14px;
+        min-width: 14px;
         height: 14px;
         color: $white;
         font-size: 10px;
