--- a/src/scss/blocks/_productCard.scss
+++ b/src/scss/blocks/_productCard.scss
@@ -4,7 +4,7 @@
     // align-items: center;
     // flex-direction: column;
     padding: 20px 15px;
-    height: 299px;
+    min-height: 299px;
     background-color: $white;
     outline: 1px solid #ECECEC;
     border-radius: 5px;
@@ -15,7 +15,7 @@
         flex-direction: column;
         align-items: center;
         gap: 10px;
-        margin-bottom: 5px;
+        margin-bottom: 10px;
     }
 
     &:hover {
@@ -26,6 +26,7 @@
         font-size: 15px;
         line-height: normal;
         min-height: 37px;
+        @include line-clamp(3);
     }
 
     &__price {
